src/test/deca/syntax/invalid/test_synt6.deca
//Resultat:
//      Erreur syntaxique : 
int x;
x=true;true
}
